# RPG_teste

./: README.md
teste/: app.py  pyproject.toml
teste/static/css/: base.css  game.css  ui.css
teste/templates/: index.html
teste/templates/ui/: enemy_panel.html  user_panel.html
